respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Fecha_Recepcion_Factura__c</fullName>
        <label>Fecha Recepción Factura</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Recuperado__c</fullName>
        <label>Fecha Recuperado</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fecha_de_ultima_cotizacion__c</fullName>
        <label>Fecha de última cotización</label>
        <summarizedField>Customer_Quote__c.Create_Date_time__c</summarizedField>
        <summaryForeignKey>Customer_Quote__c.Account_for__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fecha_de_visita__c</fullName>
        <label>Fecha de visita</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_ultima_cotizacion_date__c</fullName>
        <formula>Fecha_de_ultima_cotizacion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha de última cotización</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Figura_Relaci_n__c</fullName>
        <formula>IF(ISPICKVAL( Arrendatario_Propietario__c ,&quot;Propietario&quot;),&quot;02&quot;,
IF(ISPICKVAL( Arrendatario_Propietario__c ,&quot;Arrendatario&quot;),&quot;03&quot;,
&quot;Null&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Figura Relación</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_day_contact_status__c</fullName>
        <label>First day contact status</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flete_Internacional_Terrestre__c</fullName>
        <label>Flete Internacional Terrestre</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FTL</fullName>
                </value>
                <value>
                    <fullName>LTL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flete_Nacional_Terrestre__c</fullName>
        <label>Flete Nacional Terrestre</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FTL</fullName>
                </value>
                <value>
                    <fullName>LTL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fletintterr_cta__c</fullName>
        <label>Flete Internacional Terrestre</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FTL</fullName>
                </value>
                <value>
                    <fullName>LTL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fletnacterr_cta__c</fullName>
        <label>Flete Nacional Terrestre</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FTL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Folio_Mkt_Auto_del__c</fullName>
        <displayFormat>MKT-{00000}</displayFormat>
        <label>Folio Mkt</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Folio_Mkt_Ok2_del__c</fullName>
        <label>Folio MKT</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folio_Mkt__c</fullName>
        <defaultValue>&quot;MKT-&quot;</defaultValue>
        <description>Este campo se actualiza mediante el mapa de conversion de lead, Revisar configuración en el siguiente link
https://pak2gologistics.my.salesforce.com/p/lead/LeadFieldMappingUi</description>
        <label>Folio Mkt</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folio_con_encuesta__c</fullName>
        <label>Folio con encuesta</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formalt_cta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Formato lleno alta de proveedores</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forpag_cta__c</fullName>
        <label>Forma de Pago</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01 - EFECTIVO</fullName>
                </value>
                <value>
                    <fullName>02 - CHEQUE NOMINATIVO</fullName>
                </value>
                <value>
                    <fullName>03 - TRANSFERENCIA ELECTRONICA DE FONDOS</fullName>
                </value>
                <value>
                    <fullName>04 - TARJETA DE CREDITO</fullName>
                </value>
                <value>
                    <fullName>05 - MONEDERO ELECTRONICO</fullName>
                </value>
                <value>
                    <fullName>06 - DINERO ELECTRONICO</fullName>
                </value>
                <value>
                    <fullName>08 - VALES DE DESPENSA</fullName>
                </value>
                <value>
                    <fullName>17 - COMPENSACION</fullName>
                </value>
                <value>
                    <fullName>28 - TARETA DE DEBITO</fullName>
                </value>
                <value>
                    <fullName>29 - TARJETA DE SERVICIO</fullName>
                </value>
                <value>
                    <fullName>99 - OTROS</fullName>
                </value>
                <value>
                    <fullName>N/A - NA</fullName>
                </value>
                <value>
                    <fullName>Deposito</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fotext_cta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foto exterior del Negocio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frec_cta__c</fullName>
        <label>Frecuencia</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diaria</fullName>
                </value>
                <value>
                    <fullName>Cada Tercer día</fullName>
                </value>
                <value>
                    <fullName>Cliente Habla</fullName>
                </value>
                <value>
                    <fullName>Hablar a Cliente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Giro_Comercial__c</fullName>
        <label>Descripción Giro Comercial</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Extracción y manejo de petróleo y gas</fullName>
                </value>
                <value>
                    <fullName>Minería de minerales metálicos y no metálicos, excepto petróleo y gas</fullName>
                </value>
                <value>
                    <fullName>Servicios relacionados con la minería</fullName>
                </value>
                <value>
                    <fullName>Alimentos para animales</fullName>
                </value>
                <value>
                    <fullName>Molienda de granos y de semillas y obtención de aceites y grasas</fullName>
                </value>
                <value>
                    <fullName>Azúcares, chocolates, dulces y similares</fullName>
                </value>
                <value>
                    <fullName>Frutas, verduras, guisos y otros alimentos preparados</fullName>
                </value>
                <value>
                    <fullName>Productos lácteos</fullName>
                </value>
                <value>
                    <fullName>Comercialización, matanza, empacado y procesamiento de carne de ganado, aves y otros animales comestibles</fullName>
                </value>
                <value>
                    <fullName>Pescados y mariscos</fullName>
                </value>
                <value>
                    <fullName>Productos de panadería y tortillas</fullName>
                </value>
                <value>
                    <fullName>Otras industrias alimentarias</fullName>
                </value>
                <value>
                    <fullName>Refrescos, hielo y otras bebidas no alcohólicas, y purificación y embotellado de agua</fullName>
                </value>
                <value>
                    <fullName>Cerveza</fullName>
                </value>
                <value>
                    <fullName>Bebidas alcohólicas a base de uva y bebidas fermentadas, excepto cerveza</fullName>
                </value>
                <value>
                    <fullName>Otras bebidas</fullName>
                </value>
                <value>
                    <fullName>Industria del tabaco</fullName>
                </value>
                <value>
                    <fullName>Prendas de vestir y otros accesorios de vestir</fullName>
                </value>
                <value>
                    <fullName>Alfombras, blancos y similares</fullName>
                </value>
                <value>
                    <fullName>Otros productos textiles, excepto prendas de vestir</fullName>
                </value>
                <value>
                    <fullName>Calzado</fullName>
                </value>
                <value>
                    <fullName>Productos de cuero, piel y materiales sucedáneos</fullName>
                </value>
                <value>
                    <fullName>Madera como materia prima</fullName>
                </value>
                <value>
                    <fullName>Productos terminados de madera</fullName>
                </value>
                <value>
                    <fullName>Pulpa, papel y cartón como materia prima</fullName>
                </value>
                <value>
                    <fullName>Productos terminados de cartón y papel</fullName>
                </value>
                <value>
                    <fullName>Productos químicos básicos</fullName>
                </value>
                <value>
                    <fullName>Resinas y hules sintéticos, y fibras químicas</fullName>
                </value>
                <value>
                    <fullName>Fertilizantes, pesticidas y otros agroquímicos</fullName>
                </value>
                <value>
                    <fullName>Productos farmacéuticos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gps_cta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grupo_SAP_PICK__c</fullName>
        <label>Grupo SAP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>CONSOLIDADO P</fullName>
                </value>
                <value>
                    <fullName>FLETES P</fullName>
                </value>
                <value>
                    <fullName>SERV LOGISTICOS P</fullName>
                </value>
                <value>
                    <fullName>MAYOREO P</fullName>
                </value>
                <value>
                    <fullName>INTERNACIONAL P</fullName>
                </value>
                <value>
                    <fullName>PROV GENERAL P</fullName>
                </value>
                <value>
                    <fullName>PROV GENERAL C</fullName>
                </value>
                <value>
                    <fullName>PROV SERVICIOS P</fullName>
                </value>
                <value>
                    <fullName>SERVICIOS P</fullName>
                </value>
                <value>
                    <fullName>PROV RENTAS P</fullName>
                </value>
                <value>
                    <fullName>PROV SEGUROS P</fullName>
                </value>
                <value>
                    <fullName>PROV CONSULTA P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grupo_SAP__c</fullName>
        <label>Grupo SAP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Horrec_cta__c</fullName>
        <label>Horario de Recolección</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Antes de las 3 PM</fullName>
                </value>
                <value>
                    <fullName>3-4 PM</fullName>
                </value>
                <value>
                    <fullName>4-5 PM</fullName>
                </value>
                <value>
                    <fullName>5-6 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IATA_Code__c</fullName>
        <label>IATA Cargo Agent Code</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDproveesap_cta__c</fullName>
        <label>ID Proveedor SAP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INV_Ago__c</fullName>
        <label>INV-Ago</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INV_Dic__c</fullName>
        <label>INV-Dic</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IVA_16__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IVA 16%</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IVA_4__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IVA 4%</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Id_Bdat__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Bdat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterm__c</fullName>
        <label>Incoterm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFR</fullName>
                </value>
                <value>
                    <fullName>CIF</fullName>
                </value>
                <value>
                    <fullName>CIP</fullName>
                </value>
                <value>
                    <fullName>CPT</fullName>
                </value>
                <value>
                    <fullName>DAP</fullName>
                </value>
                <value>
                    <fullName>DAT</fullName>
                </value>
                <value>
                    <fullName>DDP</fullName>
                </value>
                <value>
                    <fullName>EXW</fullName>
                </value>
                <value>
                    <fullName>FCA</fullName>
                </value>
                <value>
                    <fullName>FOB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indicador_Nombre_Cuenta2__c</fullName>
        <formula>IF(


AND(
Account_for_Prospect_Account_Name__c = Nombre_Prospect__c,
Account_for_Prospect_Account_Name__c = Name ,
Nombre_Prospect__c = Name
)
,

&quot;IGUAL&quot;,

&quot;DIFERENTE&quot;







)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicador Nombre Cuenta (2)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicador_Nombre_Cuenta__c</fullName>
        <formula>IF(


AND(
NOT(ISBLANK( Account_for_Prospect_Account_Name__c )),
NOT(ISBLANK( Nombre_Prospect__c ))
),

IF(


 AND(
Account_for_Prospect_Account_Name__c  =  Nombre_Prospect__c,
Account_for_Prospect_Account_Name__c  =   Name ,
Nombre_Prospect__c  =   Name 
)
,

&quot;IGUAL&quot;,

&quot;DIFERENTE&quot;







),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indicador Nombre Cuenta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicador_de_impuestos__c</fullName>
        <inlineHelpText>V0 IVA COMPRAS 0% 
V2 IVA COMPRAS 16% (Default) 
VE IVA COMPRAS Exento</inlineHelpText>
        <label>Indicador de impuestos</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>V0</fullName>
                </value>
                <value>
                    <fullName>V2</fullName>
                </value>
                <value>
                    <fullName>V3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inerep_cta__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Copia IFE ambos Lados (Fisica y Rep. Legal de Persona Moral)</inlineHelpText>
        <label>INE representante legal o dueño</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Resume__c</fullName>
        <label>Insurance Resume</label>
        <summaryFilterItems>
            <field>Fee__c.Name</field>
            <operation>contains</operation>
            <value>Seguro, SEGURO</value>
        </summaryFilterItems>
        <summaryForeignKey>Fee__c.Account_for__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>International_Local__c</fullName>
        <label>International/Local</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTL_Nacional__c</fullName>
        <label>LTL Nacional</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Estafeta</fullName>
                </value>
                <value>
                    <fullName>Almex</fullName>
                </value>
                <value>
                    <fullName>Paquetexpress</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LTLnac_cta__c</fullName>
        <label>LTL Nacional</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Estafeta</fullName>
                </value>
                <value>
                    <fullName>Almex</fullName>
                </value>
                <value>
                    <fullName>Paquete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Labels_Document__c</fullName>
        <label>Labels Document</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Last_Quote__c</fullName>
        <label>Last Quote</label>
        <summarizedField>Customer_Quote__c.CreatedDate</summarizedField>
        <summaryForeignKey>Customer_Quote__c.Account_for__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_day_contact_status__c</fullName>
        <label>Last day contact status</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Late_Outstanding_Payments__c</fullName>
        <label>Late Outstanding Payments</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Limit_Exceeded__c</fullName>
        <formula>Total_Collection_Outstanding_Balance__c - Credit_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Limit Exceeded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Localidad_cat__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Precisa la clave de la ciudad, población, distrito u análogo en donde se encuentra ubicado el domicilio</description>
        <label>Localidad</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Localidad</value>
            </filterItems>
            <filterItems>
                <field>Catalogo_SAT__c.Clave_Relacion_SAT__c</field>
                <operation>equals</operation>
                <valueField>$Source.Estado_cat__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Accounts (Localidad)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lugbas_cta__c</fullName>
        <label>Lugar de Base(s)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC_CHECK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MC#</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC__c</fullName>
        <label>MC#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_Target__c</fullName>
        <label>M Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mari_cta__c</fullName>
        <label>Maritimo</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FCL</fullName>
                </value>
                <value>
                    <fullName>LCL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maritimo__c</fullName>
        <label>Maritimo</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IMPO - FCL</fullName>
                </value>
                <value>
                    <fullName>IMPO - LCL</fullName>
                </value>
                <value>
                    <fullName>EXPO - FCL</fullName>
                </value>
                <value>
                    <fullName>EXPO - LCL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medio_de_Comunicacion__c</fullName>
        <label>Medio de Comunicacion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Llamada</fullName>
                </value>
                <value>
                    <fullName>Wsapp</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medio_de_Contacto__c</fullName>
        <label>Medio de Contacto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                </value>
                <value>
                    <fullName>Correos Masivos</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Prensa</fullName>
                </value>
                <value>
                    <fullName>Plataforma Digital</fullName>
                </value>
                <value>
                    <fullName>Formulario</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mkt_Executive__c</fullName>
        <label>Mkt Executive</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Karen Pedraza</fullName>
                </value>
                <value>
                    <fullName>Edith Rueda</fullName>
                </value>
                <value>
                    <fullName>Cynthia Lopez</fullName>
                </value>
                <value>
                    <fullName>Gabriela Diaz</fullName>
                </value>
                <value>
                    <fullName>Claudia Martinez</fullName>
                </value>
                <value>
                    <fullName>Julia Gonzalez</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mkt_Layout__c</fullName>
        <formula>IF(Record_Type_Name__c = &quot;Prospect&quot;,True , False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mkt Layout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monitoreo_Recurso_Confiable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monitoreo Recurso Confiable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monto_Credito_Solicitado__c</fullName>
        <label>Monto Credito Solicitado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monto_retenido_incidencias_barras__c</fullName>
        <label>Monto retenido incidencias x barras</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Motivo_InactivoSAP__c</fullName>
        <label>Motivo Inactivo / Vetado</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motivo_Inactivo_Vetado__c</fullName>
        <label>Motivo Inactivo / Vetado</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motivo_no_venta__c</fullName>
        <inlineHelpText>Se requiere no venta</inlineHelpText>
        <label>Motivo No Venta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cliente fuera de WTP</fullName>
                </value>
                <value>
                    <fullName>Benchmark</fullName>
                </value>
                <value>
                    <fullName>Alta Tardía</fullName>
                </value>
                <value>
                    <fullName>Tarifa Alta</fullName>
                </value>
                <value>
                    <fullName>Falta de seguimiento</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Municipio_cat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Precisa la clave del municipio, delegación o alcaldía, condado u otro análogo en donde se encuentra ubicado el domicilio</description>
        <label>Municipio</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Municipio</value>
            </filterItems>
            <filterItems>
                <field>Catalogo_SAT__c.Clave_Relacion_SAT__c</field>
                <operation>equals</operation>
                <valueField>$Source.Estado_cat__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Accounts (Municipio)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NEU_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>N_mero_de_Conductores__c</fullName>
        <label>Número de Conductores</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Negociacion_de_tarifas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Negociacion de tarifas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_CustomerSF__c</fullName>
        <label>Convert Customer SAP</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Nombre_Agente_Aduanal__c</fullName>
        <label>Nombre Agente Aduanal</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_Contacto_Administrativo__c</fullName>
        <label>Nombre Contacto Administrativo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_Contacto_Comercial__c</fullName>
        <label>Nombre Contacto Comercial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_Contacto_Operativo__c</fullName>
        <label>Nombre Contacto Operativo</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Nombre_Prospect__c</fullName>
        <label>Nombre (Prospect)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notificaci_n_de_Carga__c</fullName>
        <label>Notificación de Carga</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Llamada</fullName>
                </value>
                <value>
                    <fullName>Correo</fullName>
                </value>
                <value>
                    <fullName>GPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notificaci_n_de_Descarga__c</fullName>
        <label>Notificación de Descarga</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Llamada</fullName>
                </value>
                <value>
                    <fullName>Correo</fullName>
                </value>
                <value>
                    <fullName>GPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notificaci_n_de_Transcurso__c</fullName>
        <label>Notificación de Transcurso</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Llamada</fullName>
                </value>
                <value>
                    <fullName>Correo</fullName>
                </value>
                <value>
                    <fullName>GPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notify_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notify Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Notify Party)</relationshipLabel>
        <relationshipName>NEU_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Numero_Exterior__c</fullName>
        <description>Expresa el número exterior en donde se ubica el domicilio del origen y/o destino de los bienes o mercancías.</description>
        <inlineHelpText>Expresa el número exterior en donde se ubica el domicilio del origen y/o destino de los bienes o mercancías.</inlineHelpText>
        <label>Numero Exterior</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_Interior__c</fullName>
        <description>Expresa el número interior en donde se ubica el domicilio del origen y/o destino de los bienes o mercancías.</description>
        <inlineHelpText>Expresa el número interior en donde se ubica el domicilio del origen y/o destino de los bienes o mercancías.</inlineHelpText>
        <label>Numero Interior</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>